--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,11 +12,11 @@
 
 :root {
   /* colors */
-  --background-color: #ff4500;
-  --light-color: #ff6347;
-  --dark-color: #ff7f50;
-  --text-color: #ff8c00;
-  --link-color: #ffa500;
+  --background-color: #000000;
+  --light-color: #ff0000;
+  --dark-color: #00ff00;
+  --text-color: #00ffff;
+  --link-color: #ffff00;
   --link-hover-color: #000fff;
 
   /* fonts */
