--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   /* colors */
-  --background-color: #000000;
+  --background-color: #c2c1c1;
   --light-color: #ff0000;
   --dark-color: #00ff00;
   --text-color: #00ffff;
