Update style.css file with your repo path

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@
 
 :root {
   /* colors */
-  --background-color: #c2c1c1;
-  --light-color: #ff0000;
+  --background-color: #ffffff;
+  --light-color: #817e7e;
   --dark-color: #00ff00;
   --text-color: #00ffff;
   --link-color: #ffff00;
